# vaultkeeper

./: .gitignore  CLAUDE.md  README-GUI.md  README.md  catalog-all-drives.sh  package.json  pyproject.toml  redline_single_frame.py  redline_thumbnail_extractor.py  server.py  vaultkeeper-menu.sh  vaultkeeper.sh
R3DSDKv8_6_0/: Broadcast Image Pipeline.txt  How to use the SDK.txt  IPP2 How to use.txt  Release history.txt
R3DSDKv8_6_0/Lib/win32/: R3DSDK-2010MD.lib  (+19 more)
docs/: next-steps.md  r3d-thumbnail-processing.md  system-overview.md
docs/location-system/: niimbot-instructions.md  shelf-organization.md
docs/old/: organization-structure.md  physical-tracking-plan.md  repository-plan.md  setup-instructions.md  shelf-drive-health-check.md
scripts/: assign-drive-location.js  create-shelf-locations.js  generate-label-spreadsheets.js  generate-test-labels.js  install.sh  scan-drive.js  seed-test-data.js  shelf-drive-check.sh  vaultkeeper-setup.sh
scripts/utils/: asset-tracker.py
src/: __init__.py  server.js
src/cli/: __init__.py  main.py
src/core/: __init__.py  database.py  models.py  scanner.py
src/hardware/: __init__.py  niimbot.py  scanner.py
src/health/: __init__.py  check.py
src/media/: __init__.py  thumbnail.py
src/utils/: __init__.py  qr.py
temp/: asset-tracker.py  implementation-summary.md  web-interface.py
tools/: convert_csv_to_xlsx.py  convert_with_pandas.py  csv2xlsx  csv2xlsx.go  go.mod  install_deps.sh  test.csv  test.xlsx
web/: index.html
web/css/: styles.css
web/js/: app.js
web/placeholders/: generate_placeholders.py
(+38 files in other folders)
